--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "lodash": "^4.13.1",
+    "lowdb": "^0.13.0-beta-5",
     "morgan": "~1.6.1",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
